--- a/src/main/resources/templates/product/phone.html
+++ b/src/main/resources/templates/product/phone.html
@@ -28,7 +28,7 @@
                 <tr>
                     <td class="table-phone" id="table-phone">
                         <div>
-                            <table class="table table-bordered table-striped" id="table-product">
+                            <table class="table table-hover table-bordered border-primary" id="table-product">
                                 <!-- build HTML table based on employees -->
                                 <thead class="table-dark">
                                 <tr class="tr-table-phone-title">
