--- a/src/main/resources/static/css/main_style.css
+++ b/src/main/resources/static/css/main_style.css
@@ -16,7 +16,7 @@ body {
     grid-area: nav;
     position: fixed;
     grid-area: aside-menu;
-    width: 10%;
+    width: 200px;
     min-height: 90vh;
     background-color: rgb(26, 148, 255);
     box-shadow: 2px 0px rgba(42, 42, 43, 0.938);
@@ -64,12 +64,17 @@ nav li a {
     font-size: 16px;
     border: none;
 }
+.nav-user{
+    margin-top: 5vh;
+}
 
 .nav-customer {
     margin-bottom: 5vh;
     margin-top: 5vh;
 }
-
+.nav-logout{
+    margin-top: 5vh;
+}
 ul div div a {
     color: white;
     text-decoration: none;
@@ -87,7 +92,7 @@ ul div div a {
 .dropdown-nav-product {
     display: none;
     position: absolute;
-    min-width: 100px;
+    min-width: 120px;
     background-color: rgba(0, 102, 255, 0.938);
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
@@ -186,4 +191,13 @@ ul div div a {
     position: relative;
     border-radius: 2px 2px;
     border: 1px solid black;
+}
+@media screen and (max-width: 600px) {
+    h1{
+        font-size: 20px;
+    }
+    .aside-menu{
+       width: 200px;
+    }
+
 }
