--- a/app/src/main/res/layout/activity_active_account.xml
+++ b/app/src/main/res/layout/activity_active_account.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/aclonica"
-        android:text="ACTIVE EMAIL"
+        android:text="FORGET PASSWORD"
         android:textAlignment="center"
         android:textColor="@color/red"
         android:textSize="32dp"
