--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -16,19 +16,19 @@
     </div>
     <div class='w-50  d-flex' style='height:100vh;justify-self: center;'>
       <form th:action="@{/admin/login-fail}" id='formLoginCustomer' th:object="${account}"  method='post' style='margin:auto;border:1px solid #ccc;width:400px;padding: 50px; box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15);'>
-        <h3>Đăng nhập</h3>
+        <h3 style="text-align: center">Login</h3>
         <div class="form-group" style=''>
-            <label for="account" class="form-label">Tài khoản</label>
+            <label for="account" class="form-label">Username</label>
             <input th:field="*{username}" id="account" name="account"  rules='required' inputNoSpace type="text" placeholder="Nhập tài khoản nhân viên" class="form-control">
             <span class="form-message"></span>
           </div>
           <div class="form-group" style=''>
-            <label for="password" class="form-label">Mật khẩu</label>
+            <label for="password" class="form-label">Password</label>
             <input th:field="*{password}"  id="password" name="password" rules='required' inputNoSpace type="password" placeholder="Nhập mật khẩu nhân viên" class="form-control">
             <span class="form-message"></span>
           </div>
           <button type='submit' class='btn btn-success w-100 mt-4' >
-            Đăng nhập
+            Login
           </button>
           <p th:text="${message.getMessage()}" style="color: red"/>
           <!-- <div class='text-center mt-2'>
