--- a/src/main/resources/templates/staff/upload-staff.html
+++ b/src/main/resources/templates/staff/upload-staff.html
@@ -166,6 +166,7 @@
                         <div class="vertical-center-staff">
                             <button type="submit" class="btn-add">ADD</button>
                         </div>
+                        <p th:text="${message}" style="color: red"/>
                     </footer>
                 </div>
             </form>
